# skill-gomoku

./: .gitignore  AGENTS.md  README.md  pyproject.toml  release_so101.py  requirements.txt  so101_board_81_positions.json
calibration/lerobot/robots/so_follower/: so101_follower_0610.json
config/: default.yaml  key.example.yaml
docs/: robot.md
docs/adr/: 0001-voice-interaction-boundary.md
scripts/: calibrate_board.py  calibrate_robot_board.py  install_lerobot_calibration.py  install_pi_speech.py  move_to_board_position.py  record_missing_pose_map.py  record_pickup_poses.py  replay_robot_corners.py  run_live_game.py  test_perception.py
src/: __init__.py  interaction.py  orchestrator.py
src/game/: __init__.py  ai.py  board.py  decision.py  llm_ai.py  play_area.py
src/perception/: __init__.py  board_calibration.py  board_detector.py  camera.py  grid_mapper.py  state_extractor.py  stone_detector.py
src/robot/: __init__.py  air_pump.py  calibration.py  controller.py  lerobot_calibration.py  pose_mapper.py  so101_adapter.py  so101_lowlevel_mover.py  so101_mover.py
src/robot/tools/: __init__.py  so101_move_demo.py
src/utils/: config_loader.py  constants.py  visualizer.py
tests/: __init__.py  manual_speech_test.py  test_game_flow.py  test_live_run_safety.py  test_move_to_board_position.py  test_perception_geometry.py  test_robot_calibration.py
tests/air_pump/: airpump4pi.py  arduno_pwn_simulator.py
